--- a/src/_components/head.liquid
+++ b/src/_components/head.liquid
@@ -5,6 +5,6 @@
 
 <meta name="description" content="{{ metadata.description }}" />
 
-<link rel="stylesheet" href="{% webpack_path css %}" />
-<script src="{% webpack_path js %}" defer></script>
+<link rel="stylesheet" href="/trying-bridgetown{% webpack_path css %}" />
+<script src="/trying-bridgetown{% webpack_path js %}" defer></script>
 {% live_reload_dev_js %}
